--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<div class="page">
 			<div class="headerpart">
-				<img src="g4.jpg" alt="ntg" class="image">
+				<img src="g4.JPG" alt="ntg" class="image">
 			</div>
 			<div class="linkspart">
 				<center>
